--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <body class="bg-dark position-absolute top-50 start-50 translate-middle">
 
         <ul class="nav nav-pills mb-3" role="tablist">
-            <li class="nav-item" role="presentation">
-                <button id="tech" onclick="toggleTab(this.id)" class="nav-link" type="button" role="tab" tabindex="-1" aria-controls="panel-1" aria-selected="false">Tech Company Name Gen</button>
+            <li class="nav-item">
+                <button id="tech" onclick="toggleTab(this)" class="nav-link" type="button" role="tab" tabindex="-1" aria-controls="panel-1" aria-selected="false">Tech Company Name Gen</button>
             </li>
-            <li class="nav-item" role="presentation">
-                <button id="fant" onclick="toggleTab(this.id)" class="nav-link active" type="button" role="tab" tabindex="0" aria-controls="panel-2" aria-selected="true">Fantasy Name Gen</button>
+            <li class="nav-item">
+                <button id="fant" onclick="toggleTab(this)" class="nav-link active" type="button" role="tab" tabindex="0" aria-controls="panel-2" aria-selected="true">Fantasy Name Gen</button>
             </li>
         </ul>
 
