--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <button id="tech" onclick="toggleTab(this)" class="nav-link" type="button" role="tab" tabindex="-1" aria-controls="panel-1" aria-selected="false">Tech Company Name Gen</button>
             </li>
             <li class="nav-item">
-                <button id="fant" onclick="toggleTab(this)" class="nav-link active" type="button" role="tab" tabindex="0" aria-controls="panel-2" aria-selected="true">Fantasy Name Gen</button>
+                <button id="fant" onclick="toggleTab(this)" class="nav-link active" type="button" role="tab" tabindex="0" aria-controls="panel-2" aria-selected="true">Fantasy Name Gen (f)</button>
             </li>
         </ul>
 
@@ -30,8 +30,8 @@
 
         <br><button onclick="generate()" class="btn btn-primary" style="width:100%;">Generate</button>
 
-        <script src="data.js"></script>
-        <script src="data2.js"></script>
+        <script src="data/tech.js"></script>
+        <script src="data/namesf.js"></script>
         <script src="generator.js"></script>
     </body>
 </html>
