--- a/index.html
+++ b/index.html
@@ -9,29 +9,22 @@
 
     <body class="bg-dark position-absolute top-50 start-50 translate-middle">
 
-        <ul class="nav nav-pills mb-3" role="tablist">
-            <li class="nav-item">
-                <button id="tech" onclick="toggleTab(this)" class="nav-link" type="button" role="tab" tabindex="-1" aria-controls="panel-1" aria-selected="false">Tech Company Name Gen</button>
-            </li>
-            <li class="nav-item">
-                <button id="fant" onclick="toggleTab(this)" class="nav-link active" type="button" role="tab" tabindex="0" aria-controls="panel-2" aria-selected="true">Fantasy Name Gen (f)</button>
-            </li>
+        <ul id="genTabs" class="d-flex nav nav-pills mb-3">
+            <!-- GENERATOR SELECTION BUTTONS -->
         </ul>
 
-        <h3 id="title" class="d-flex justify-content-center" style="color: slategray">Fantasy Name Generator (f)</h3><br>
+        <h3 id="genTitle" class="d-flex justify-content-center" style="color: slategray">Tech Names</h3><br>
 
         <div class="tab-content" role="tabpanel" tabindex="0" id="panel-1" aria-labelledby="tab-1">
             <div class="container-fluid">
-                <div id="content" class="text-center text-light">
-                    <!-- GENERATIONS WILL DISPLAY HERE -->
+                <div id="namesList" class="text-center text-light">
+                    <!-- GENERATED NAMES -->
                 </div>
             </div>
         </div>
 
         <br><button onclick="generate()" class="btn btn-primary" style="width:100%;">Generate</button>
 
-        <script src="data/tech.js"></script>
-        <script src="data/namesf.js"></script>
         <script src="generator.js"></script>
     </body>
 </html>
