--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
             <!-- GENERATOR SELECTION BUTTONS -->
         </ul>
 
-        <h3 id="genTitle" class="d-flex justify-content-center" style="color: slategray">Tech Names</h3><br>
+        <h3 id="genTitle" class="d-flex text-center justify-content-center" style="color: slategray">Tech Names</h3><br>
 
-        <div class="tab-content" role="tabpanel" tabindex="0" id="panel-1" aria-labelledby="tab-1">
+        <div class="tab-content">
             <div class="container-fluid">
                 <div id="namesList" class="text-center text-light">
                     <!-- GENERATED NAMES -->
