added saveable names

--- a/index.html
+++ b/index.html
@@ -17,14 +17,17 @@
 
         <div class="tab-content">
             <div class="container-fluid">
-                <div id="namesList" class="text-center text-light">
+                <div id="namesList" class="d-grid text-center text-light">
                     <!-- GENERATED NAMES -->
                 </div>
             </div>
         </div>
 
-        <br><button onclick="generate()" class="btn btn-primary" style="width:100%;">Generate</button>
+        <br><button onclick="generate()" class="btn btn-primary" style="width:90%;">Generate</button><button onclick="displaySaved()" class="btn btn-primary" style="width:10%;">⭐</button>
 
         <script src="generator.js"></script>
+        <script>
+
+        </script>
     </body>
 </html>
