--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css" href="style.css"> 
         <title>Name Generators</title>
     </head>
 
     <body class="bg-dark position-absolute top-50 start-50 translate-middle">
 
-        <ul id="genTabs" class="d-flex nav nav-pills mb-3">
+        <div class="nav nav-pills justify-content-center d-flex mb-3" id="genTabs">
             <!-- GENERATOR SELECTION BUTTONS -->
-        </ul>
+        </div>
 
-        <h3 id="genTitle" class="d-flex text-center justify-content-center" style="color: slategray">Tech Names</h3><br>
+        <h3 id="genTitle" class="d-flex text-center justify-content-center"></h3><br>
 
         <div class="tab-content">
             <div class="container-fluid">
@@ -23,11 +24,11 @@
             </div>
         </div>
 
-        <br><button id="genBtn" onclick="generate()" class="btn btn-primary" style="width:90%;">Generate</button><button onclick="displaySaved()" class="btn btn-primary" style="width:10%;">⭐</button>
+        <br><button onclick="displaySaved()" class="btn btn-primary text-center" style="width:10%;">-</button><button id="genBtn" onclick="generate()" class="btn btn-primary" style="width:80%;">Generate</button><button onclick="displaySaved()" class="btn btn-primary text-center" style="width:10%;">⭐</button>
 
         <script src="generator.js"></script>
         <script>
-
+            
         </script>
     </body>
 </html>
