updates names data

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 
         <br><button onclick="displaySaved()" class="btn btn-primary text-center" style="width:10%;">-</button><button id="genBtn" onclick="generate()" class="btn btn-primary" style="width:80%;">Generate</button><button onclick="displaySaved()" class="btn btn-primary text-center" style="width:10%;">⭐</button>
 
-        <script src="generator.js"></script>
+        <script src="config.js"></script>
+        <script src="generator.js"></script> 
         <script>
             
         </script>
