update random name generation and ui

--- a/index.html
+++ b/index.html
@@ -9,14 +9,18 @@
         <title>Name Generators</title>
     </head>
 
-    <body class="bg-dark position-absolute top-50 start-50 translate-middle">
+    <body class="position-absolute top-50 start-50 translate-middle" style="background-color: rgb(18, 25, 37);">
 
         <div class="nav nav-pills justify-content-center d-flex mb-3" id="genTabs">
             <!-- GENERATOR SELECTION BUTTONS -->
         </div>
 
         <h3 id="genTitle" class="d-flex text-center justify-content-center"></h3><br>
-
+        <div id="charBox" class="input-group mb-3 start-50 translate-middle" style="width: 75%;">
+            <input id="charBoxInputC" type="text-area" class="form-control btn-dark text-center" placeholder="consonants" style="color: whitesmoke;" aria-label="Username" aria-describedby="basic-addon1">
+            <input id="charBoxInputV" type="text-area" class="form-control btn-dark text-center" placeholder="vowels" style="color: whitesmoke;" aria-label="Username" aria-describedby="basic-addon1">
+        </div>
+        
         <div class="tab-content width: 100%">
             <div class="container-fluid">
                 <div id="namesList" class="d-grid text-center text-light">
