--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <title>Name Generators</title>
     </head>
 
-    <body class="position-absolute top-50 start-50 translate-middle" style="background-color: rgb(18, 25, 37);">
+    <body class="container-fluid position-absolute top-50 start-50 translate-middle" style="background-color: rgb(18, 25, 37);">
 
         <div class="nav nav-pills justify-content-center d-flex mb-3" id="genTabs">
             <!-- GENERATOR SELECTION BUTTONS -->
