--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
     </head>
 
     <body class="container-fluid position-absolute top-50 start-50 translate-middle" style="background-color: rgb(18, 25, 37);">
-
         <ul id="navbar" class="nav justify-content-center nav-pills">
               <!-- GENERATOR SELECTION BUTTONS -->
         </ul>
         
+        <div class="nav nav-pills justify-content-center d-flex mb-3" id="genTabs">
+            <!-- GENERATOR SELECTION BUTTONS -->
+        </div>
 
         <h3 id="genTitle" class="d-flex text-center justify-content-center"></h3><br>
         <div id="charBox" class="input-group mb-3 start-50 translate-middle" style="width: 75%;">
